fix artist case sentitivity

--- a/Katatsuki/MainWindow.xaml
+++ b/Katatsuki/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Katatsuki"
         mc:Ignorable="d"
         Title="MainWindow" 
-        ResizeMode="NoResize"
+        ResizeMode="CanResize"
         >
     <Window.Resources>
         <CollectionViewSource 
